text-align center

--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 <html>
 	<head>
 		<title>Xiaoli Chen</title>
+		<style>
+			ul {
+				text-align: center;
+			}
+			li {
+				padding: 10px;
+			}
+			p {
+				text-align: center;
+			}
+			h1 {
+				text-align: center;
+			}
+		</style>
 	</head>
 	<body>
 		<nav>
