--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 	<head>
 		<title>Xiaoli Chen</title>
-		<style>
+		<link rel="stylesheet" type="text.css" href="/css/main.css">
+		<!-- link to main style sheet -->
+		<!--<style>
 			ul {
 				text-align: center;
 			}
@@ -15,7 +17,7 @@
 			h1 {
 				text-align: center;
 			}
-		</style>
+		</style>-->
 	</head>
 	<body>
 		<nav>
@@ -29,13 +31,13 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+				<p>I'm a trained hydrological modeler <em>and a singer too</em> and a Mathematics enthusiasts. . <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:haier.cxl@gmail.com">email</a></li>
+        		<li><a href="https://github.com/xiaoli-chen">github.com/xiaoli-chen</a></li>
 			</ul>
 		</footer>
 	</body>
