--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, this is Xiaoli Chen!</h1>
-				<p>I'm a trained hydrological modeler <em>and a singer too</em> and a Mathematics enthusiasts. . <a href="/about">Read more about my life...</a></p>
+				<p>I'm a trained hydrological modeler <em>and a singer too</em> and a Mathematics enthusiasts. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
