--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
     		</ul>
 		</nav>
 		<div class="container">
+		---
+		layout: default
+		title: Xiaoli, genius
+		---
+			
     		<div class="blurb">
         		<h1>Hi there, this is Xiaoli Chen!</h1>
 				<p>I'm a trained hydrological modeler <em>and a singer too</em> and a Mathematics enthusiasts. <a href="/about">Read more about my life...</a></p>
