--- a/index.html
+++ b/index.html
@@ -1,49 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Xiaoli Chen</title>
-		<link rel="stylesheet" type="text.css" href="/css/main.css">
-		<!-- link to main style sheet -->
-		<!--<style>
-			ul {
-				text-align: center;
-			}
-			li {
-				padding: 10px;
-			}
-			p {
-				text-align: center;
-			}
-			h1 {
-				text-align: center;
-			}
-		</style>-->
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-		---
-		layout: default
-		title: Xiaoli, genius
-		---
-			
-    		<div class="blurb">
-        		<h1>Hi there, this is Xiaoli Chen!</h1>
-				<p>I'm a trained hydrological modeler <em>and a singer too</em> and a Mathematics enthusiasts. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:haier.cxl@gmail.com">email</a></li>
-        		<li><a href="https://github.com/xiaoli-chen">github.com/xiaoli-chen</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
+<div class="blurb">
+	<h1>Hi there, I'm Hank Quinlan!</h1>
+	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
