--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 title: Hank Quinlan, Horrible Cop
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hi there, this is Xiaoli Chen!</h1>
+	<p>I'm a trained hydrological modeler <em>and I'm a singer </em> plus a Mathematics enthusiast <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
