--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Xiaoli Chen, genius
 ---
 <div class="blurb">
 	<h1>Hi there, this is Xiaoli Chen!</h1>
